--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body {
 table.table tr th, table.table tr td {
 	border-color: #e9e9e9;
 	padding: 12px 5px;
-	vertical-align: middle;
+	vertical-align: middle;	
 }
 table.table tr th:first-child {
 	width: 100px;
@@ -222,3 +222,9 @@ table.table .avatar {
 .modal form label {
 	font-weight: normal;
 }
+#btn-back-to-top {
+	position: fixed;
+	bottom: 20px;
+	right: 20px;
+	display: none;
+  }
